# learn_rust

./: .gitignore  README.md
.github/workflows/: build.yaml  ci.yaml
ev_charging_api/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  compose.yaml  init.sql
ev_charging_api/infra/k8s/: argocd-app.yaml
ev_charging_api/infra/k8s/base/: kustomization.yaml  rollout.yaml  service.yaml
ev_charging_api/infra/k8s/overlays/dev/: config.yaml  deps.yaml  kustomization.yaml
ev_charging_api/proto/: charging.proto
ev_charging_api/src/: config.rs  main.rs
ev_charging_api/src/domain/: charge_session.rs  kwh.rs  mod.rs  repository.rs
ev_charging_api/src/infrastructure/: mod.rs  postgres_repository.rs  telemetry.rs
ev_charging_api/src/presentation/: grpc_handler.rs  mod.rs
ev_charging_api/src/usecase/: charge_session_usecase.rs  mod.rs
ev_charging_api/tests/: api_test.rs
experiment/my_rust_module/: Cargo.toml  README.md  pyproject.toml
experiment/my_rust_module/src/: lib.rs
experiment/my_rust_module/tests/: test_module.py
watermelon/: .gitignore  Cargo.toml  README.md  index.html  main.js  package-lock.json  package.json  vite.config.mjs
watermelon/src/: lib.rs
watermelon/src-tauri/: tauri.conf.json
